--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.tpl.html
@@ -2,8 +2,7 @@
     <div class="navigation-tab"
          data-ng-repeat="item in $ctrl.tabItems"
          data-ui-sref="{{item.uiRoute}}"
-         data-ui-sref-active="active"
-         data-igz-capability-enforcer="{{item.capability}}">
+         data-ui-sref-active="active">
         {{item.tabName | uppercase}}
     </div>
 </div>
