IG-1708 [Nuclio] Implement "Build command" field in 'Build' sub-tab

--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -54,8 +54,7 @@
                   data-ng-focus="$ctrl.focusInput()"
                   data-ng-blur="$ctrl.unfocusInput()"
                   data-ng-change="$ctrl.updateInputValue()"
-                  spellcheck="{{$ctrl.spellcheck}}"
-                  data-igz-input-blur-on-enter></textarea>
+                  spellcheck="{{$ctrl.spellcheck}}"></textarea>
     </div>
 
     <div data-ng-if="$ctrl.fieldType === 'password'">
