--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -496,6 +496,22 @@
     .generateIconClass(970);
 }
 
+.ncl-icon-script {
+    .generateIconClass(971);
+}
+
+.ncl-icon-unknown-file {
+    .generateIconClass(972);
+}
+
+.ncl-icon-paperclip {
+    .generateIconClass(973);
+}
+
+.ncl-icon-close {
+    .generateIconClass(974);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
