--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -13,6 +13,7 @@
 @ncl-white: #ffffff;
 @ncl-light-grey: #f7f7fa;
 @ncl-light-grey-two: #f1f6fa;
+@ncl-light-grayish-blue: #f2f2f5;
 @ncl-border-color: #e6ebf1;
 @ncl-pale-grey: #e1e0e5;
 @ncl-pale-grey-two: #edecef;
