IG-1719 [Data Lifecycle] Container dropdown options are not separated from each other (move changes to iguazio/nuclio for simplification of merging with development)

--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -199,6 +199,10 @@
                     background-color: @pale-grey-two;
                 }
 
+                .list-item-description {
+                    padding: 5px 0;
+                }
+
                 &.selected-item {
                     color: @dusk-three;
                 }
