IG-1708 [Nuclio] Implement "Build command" field in 'Build' sub-tab (refactor)

--- a/src/igz_controls/components/action-menu/action-menu.tpl.html
+++ b/src/igz_controls/components/action-menu/action-menu.tpl.html
@@ -1,6 +1,6 @@
 <div class="igz-action-menu" data-ng-if="$ctrl.isVisible()">
 
-    <div class="menu-button igz-icon-context-menu"
+    <div class="menu-button {{$ctrl.icon}}"
          data-ng-class="{active: $ctrl.isMenuShown}"
          data-ng-click="$ctrl.toggleMenu($event)">
     </div>
