--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.less
@@ -31,17 +31,7 @@
         }
     }
 
-    .buttons {
-        font-weight: 500;
-        font-size: 12px;
-        font-size: 12px;
-
-        .primary-button {
-            width: 82px;
-            height: 32px;
-            border-radius: 2px;
-            background-color: @ncl-orange-two;
-            border: solid 1px @ncl-orange-two;
-        }
+    .ncl-primary-button {
+        cursor: pointer;
     }
 }
