IG-1708 [Nuclio] Implement "Build command" field in 'Build' sub-tab (fixed)

--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -21,7 +21,9 @@
 @ncl-silver: #c9c9cd;
 @ncl-grey: #acaab3;
 @ncl-greyish-purple: #898593;
+@ncl-dark-greyish-blue: #9997a0;
 @ncl-dusk-three: #474056;
+@ncl-dark-grey: #0a0a0a;
 @ncl-black: #000000;
 @ncl-orangish: #f9794f;
 @ncl-dark-orange: #ef7a51;
