--- a/src/igz_controls/components/action-menu/action-menu.tpl.html
+++ b/src/igz_controls/components/action-menu/action-menu.tpl.html
@@ -1,6 +1,6 @@
 <div class="igz-action-menu" data-ng-if="$ctrl.isVisible()">
 
-    <div class="menu-button {{$ctrl.icon}}"
+    <div class="menu-button {{$ctrl.iconClass}}"
          data-ng-class="{active: $ctrl.isMenuShown}"
          data-ng-click="$ctrl.toggleMenu($event)">
     </div>
