--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -3,7 +3,7 @@
         margin-bottom: 23px;
 
         .field-label {
-            font-family: Roboto, sans-serif;
+            font-family: @font-family-sans-serif;
             font-size: 14px;
             font-weight: 500;
             text-align: left;
@@ -37,12 +37,12 @@
             .file-block {
                 height: 32px;
                 border-radius: 2px;
-                background-color: #f2f2f5;
-                border: solid 1px #e1e0e5;
+                background-color: @ncl-light-grayish-blue;
+                border: solid 1px @ncl-pale-grey;
 
                 .file-name {
                     height: 14px;
-                    font-family: Roboto, sans-serif;
+                    font-family: @font-family-sans-serif;
                     font-size: 14px;
                     line-height: 1.38;
                 }
@@ -55,18 +55,18 @@
 
                 .progress {
                     position: absolute;
-                    background-color: #fff;
+                    background-color: @ncl-white;
                     display: inline-block;
                     width: 95px;
                     height: 6px;
-                    border: 1px solid #e1e0e5;
+                    border: 1px solid @ncl-pale-grey;
                     border-radius: 2px;
                     top: 13px;
                     right: 28px;
 
                     .progress-bar {
                         border-radius: 2px;
-                        background-color: #28afe4;
+                        background-color: @ncl-dark-sky-blue;
                     }
                 }
 
@@ -103,7 +103,7 @@
 
                     .progress-percents {
                         margin-left: 15px;
-                        color: #0a0a0a;
+                        color: @ncl-dark-grey;
                     }
 
                     .file-name {
@@ -148,7 +148,7 @@
 
                         .uploaded-file-directory {
                             margin-left: 8px;
-                            color: #9997a0;
+                            color: @ncl-dark-greyish-blue;
                         }
                     }
                 }
@@ -183,18 +183,16 @@
             border-radius: 50%;
             color: @ncl-dusk-three;
         }
+
         .active {
+            .nclBlack(0.1);
             background-color: @ncl-silver;
-            box-shadow: inset 0px 2px 3px 0 rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0px 2px 3px 0 @color;
         }
 
         .menu-dropdown {
             margin-top: 4px;
             right: -18px;
         }
-    }
-
-    .file-selection-button {
-        display: none;
     }
 }
