--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -13,6 +13,7 @@
 @ncl-white: #ffffff;
 @ncl-light-grey: #f7f7fa;
 @ncl-light-grey-two: #f1f6fa;
+@ncl-light-grayish-blue: #f2f2f5;
 @ncl-border-color: #e6ebf1;
 @ncl-pale-grey: #e1e0e5;
 @ncl-pale-grey-two: #edecef;
@@ -20,7 +21,9 @@
 @ncl-silver: #c9c9cd;
 @ncl-grey: #acaab3;
 @ncl-greyish-purple: #898593;
+@ncl-dark-greyish-blue: #9997a0;
 @ncl-dusk-three: #474056;
+@ncl-dark-grey: #0a0a0a;
 @ncl-black: #000000;
 @ncl-orangish: #f9794f;
 @ncl-dark-orange: #ef7a51;
