added new `Data` icon

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -512,6 +512,10 @@
     .generateIconClass(974);
 }
 
+.igz-icon-data {
+    .generateIconClass(975);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
