IG-1711 [Nuclio] Function versions configurations drop down issue.

--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -37,7 +37,8 @@
 
         <div class="three-dot-menu">
             <igz-action-menu data-actions="$ctrl.actions"
-                             data-on-fire-action="$ctrl.onFireAction">
+                             data-on-fire-action="$ctrl.onFireAction"
+                             data-list-class="$ctrl.listClass">
             </igz-action-menu>
         </div>
     </form>
