--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -18,6 +18,7 @@
     }
 
     .menu-dropdown {
+        visibility: hidden;
         background-color: @white;
         border: 1px solid @primary-border;
         border-radius: 2px;
@@ -136,5 +137,11 @@
         .menu-dropdown {
             margin: 0;
         }
+    }
+
+    .upward-menu {
+        visibility: visible;
+        top: -65px;
+        right: 15px;
     }
 }
