--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -8,6 +8,12 @@
         .name-field {
             margin-right: 14px;
             width: 178px;
+
+            .error {
+                color: @ncl-darkish-pink;
+                font-size: 12px;
+                white-space: nowrap;
+            }
         }
 
         .class-field {
