IG-1749 [Nuclio] Please make demo mechanism in Nuclio project. (fixed)

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
@@ -15,9 +15,15 @@
                 margin-right: 16px;
             }
 
-            .label {
-                padding: 0;
-                margin-bottom: 5px;
+            .runtime {
+                height: 36px;
+                border-radius: 2px;
+                padding: 9px 0 0 14px;
+                text-transform: capitalize;
+                font-family: Roboto;
+                font-size: 14px;
+                text-align: left;
+                color: #474056;
             }
 
             &.arguments-input {
