--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
@@ -20,10 +20,10 @@
                 border-radius: 2px;
                 padding: 9px 0 0 14px;
                 text-transform: capitalize;
-                font-family: Roboto;
+                font-family: @font-family-sans-serif;
                 font-size: 14px;
                 text-align: left;
-                color: #474056;
+                color: @ncl-dusk-three;
             }
 
             &.arguments-input {
