IG-1749 [nuclio] Add demo mechanism to nuclio (#19)

--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
@@ -107,11 +107,11 @@
                         padding: 0;
                     }
                 }
-
-                &.runtime-attributes {
-                    visibility: hidden;
-                }
             }
         }
+    }
+
+    .invisible-block {
+        visibility: hidden;
     }
 }
