Fixed configuration, trigger tabs

--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -10,6 +10,7 @@
                                     data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                     data-update-data-field="name"
                                     data-form-object="$ctrl.keyValueInputForm"
+                                    data-validation-is-required="true"
                                     data-placeholder-text="Type key"></igz-validating-input-field>
 
         <igz-default-dropdown class="input-type"
@@ -32,7 +33,7 @@
                                     data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                     data-update-data-field="value"
                                     data-form-object="$ctrl.keyValueInputForm"
-                                    data-validation-is-required="false"
+                                    data-validation-is-required="true"
                                     data-placeholder-text="Type value..."></igz-validating-input-field>
 
         <div class="three-dot-menu">
