--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
@@ -70,7 +70,10 @@
                     margin-bottom: 5px;
                 }
 
-                .create-label-button {
+                .create-variable-button,
+                .create-annotation-button,
+                .create-label-button,
+                .create-binding-button {
                     display: flex;
                     align-items: center;
                     height: 36px;
