--- a/src/nuclio/projects/project/functions/function.less
+++ b/src/nuclio/projects/project/functions/function.less
@@ -6,4 +6,8 @@ ncl-functions {
         font-size: 14px;
         color: @ncl-dusk-three;
     }
+
+    .invisible {
+        visibility: hidden;
+    }
 }
