--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -20,12 +20,22 @@
                     </span>
                 </div>
                 <div data-ng-hide="!$ctrl.item.ui.expanded" class="expanded-item-info-block">
-                    <div class="igz-row common-table-cells-container item-info-row">
+                    <div class="igz-row common-table-cells-container item-info-row"
+                         data-ng-if="!$ctrl.isNil($ctrl.item.url)">
                         <div class="igz-col-30 common-table-cell field-label">
                             URL:
                         </div>
                         <div class="igz-col-70 common-table-cell">
                             {{ $ctrl.item.url }}
+                        </div>
+                    </div>
+                    <div class="igz-row common-table-cells-container item-info-row"
+                         data-ng-if="!$ctrl.isNil($ctrl.item.maxWorkers)">
+                        <div class="igz-col-30 common-table-cell field-label">
+                            Max Workers:
+                        </div>
+                        <div class="igz-col-70 common-table-cell">
+                            {{ $ctrl.item.maxWorkers }}
                         </div>
                     </div>
                     <div class="igz-row common-table-cells-container item-info-row"
