changes regarding to general comments

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
@@ -10,7 +10,7 @@
         border: solid 1px @ncl-pale-grey;
 
         .common-table-cells-container {
-            cursor: default;
+            cursor: pointer;
         }
 
         .function-row-collapse {
