--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -22,8 +22,13 @@
             }
         }
 
-        .build-command-field .textarea-field {
-            height: 177px;
+        .build-command-field {
+            .textarea-field {
+                height: 177px;
+                resize: none;
+                white-space: nowrap;
+                overflow-x: auto;
+            }
         }
     }
 
