--- a/src/nuclio/common/less/buttons.less
+++ b/src/nuclio/common/less/buttons.less
@@ -20,7 +20,10 @@
     }
 
     &.disabled {
-        display: none;
+        background-color: @ncl-pale-grey;
+        border: solid 1px @ncl-pale-grey;
+        box-shadow: none;
+        cursor: default;
     }
 }
 
@@ -55,6 +58,13 @@
         border-radius: 2px;
         background-color: @ncl-white;
         padding: 8px 16px;
+    }
+
+    &.disabled {
+        background-color: @ncl-pale-grey;
+        border: solid 1px @ncl-pale-grey;
+        box-shadow: none;
+        cursor: default;
     }
 }
 
@@ -97,6 +107,9 @@
     }
 
     &.disabled {
-        display: none;
+        background-color: @ncl-pale-grey;
+        border: solid 1px @ncl-pale-grey;
+        box-shadow: none;
+        cursor: default;
     }
 }
