--- a/src/nuclio/common/less/palette.less
+++ b/src/nuclio/common/less/palette.less
@@ -28,6 +28,7 @@
 @ncl-orangish: #f9794f;
 @ncl-dark-orange: #ef7a51;
 @ncl-pale-orange: #fdbc5a;
+@ncl-sunflower-yellow: #f7dd00;
 @ncl-orange: #fa9153;
 @ncl-orange-two: #fa8f53;
 @ncl-darkish-pink: #e54158;
@@ -73,6 +74,10 @@
 
 .nclOrangish(@alpha) {
     @color: rgba(249, 121, 79, @alpha);
+}
+
+.nclSunflowerYellow(@alpha) {
+    @color: rgba(247, 221, 0, @alpha);
 }
 
 .nclPaleOrange(@alpha) {
