--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -126,4 +126,172 @@
             }
         }
     }
+
+    @media screen and (max-height: 900px) {
+        .ncl-edit-version-execution-result {
+            max-height: 260px;
+
+            .igz-scrollable-container {
+                height: 230px;
+            }
+
+            &.deploy-result {
+                max-height: none;
+
+                .igz-scrollable-container {
+                    max-height: 260px;
+                    height: auto;
+                }
+            }
+        }
+    }
+
+    .ncl-edit-version-execution-result {
+        margin: 17px 24px;
+        padding: 16px 13px 0;
+        background-color: @ncl-light-green;
+        border: solid 1px @ncl-green-aquamarine;
+        position: relative;
+
+        &.failed {
+            .nclDarkishPink(0.1);
+            background-color: @color;
+            border: solid 1px @ncl-darkish-pink;
+        }
+
+        &.in-progress {
+            .nclSunflowerYellow(0.1);
+            background-color: @color;
+            border: solid 1px @ncl-sunflower-yellow;
+        }
+
+        .igz-scrollable-container {
+            max-height: 420px;
+        }
+
+        &.deploy-result {
+            .ncl-execution-result-status {
+                &.collapsed {
+                    margin-bottom: 12px;
+                }
+            }
+
+            .icon-collabled.general-content {
+                .duskThree(0.64);
+                position: absolute;
+                right: 23px;
+                top: 5px;
+                color: @color;
+                cursor: pointer;
+            }
+
+            .btn-close {
+                margin-right: 53px;
+            }
+        }
+
+        .ncl-execution-result-status {
+            color: @ncl-darkish-pink;
+            line-height: 24px;
+            font-size: 14px;
+            font-family: @font-family-sans-serif;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+
+            &.succeeded {
+                color: @ncl-green-aquamarine;
+            }
+
+            &.in-progress {
+                color: @ncl-pale-orange;
+                margin-bottom: 12px;
+            }
+
+            .result-status-icon {
+                font-size: 24px;
+                padding-right: 9px;
+            }
+        }
+
+        // Collapsed block
+        .ncl-execution-result-block {
+            .collapsed-block-title {
+                position: relative;
+                display: inline-block;
+                vertical-align: top;
+                font-family: @font-family-sans-serif;
+                color: @ncl-dusk-three;
+                font-size: 16px;
+                font-weight: bold;
+                cursor: pointer;
+                margin: 8px 0;
+                line-height: 16px;
+
+                &.collapsed {
+                    margin-bottom: 12px;
+                }
+
+                .icon-collapsed {
+                    .duskThree(0.64);
+                    color: @color;
+                    font-size: 12px;
+                    margin: 0 13px 0 4px;
+                }
+
+                &.without-collapse {
+                    padding: 0;
+                    padding-left: 4px;
+                    cursor: default;
+
+                    &:before {
+                        border: 0;
+                        display: none;
+                    }
+                }
+            }
+
+            .collapsed-block-content-wrapper {
+                padding: 0 0 7px 4px;
+
+                &.collapsing {
+                    transition-duration: 150ms;
+                }
+
+                .value-row {
+                    margin: 5px 10px 14px 24px;
+                    padding-left: 16px;
+                    border: solid 1px #c7e0d9;
+                    line-height: 36px;
+
+                    &.failed {
+                        .nclDarkishPink(0.3);
+                        border: solid 1px @color;
+                    }
+
+                    &.in-progress {
+                        .nclSunflowerYellow(0.4);
+                        border: solid 1px @color;
+                    }
+                }
+
+                .label-value-row {
+                    margin: 0 10px 8px 27px;
+                    display: flex;
+                    flex-direction: row;
+                    font-size: 14px;
+                    line-height: 16px;
+
+                    .label-cell {
+                        color: @ncl-greyish-purple;
+                        width: 172px;
+                    }
+                    .value-cell {
+                        width: auto;
+                        padding-left: 23px;
+                    }
+                }
+            }
+        }
+    }
 }
