--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-data-bindings/version-configuration-data-bindings.less
@@ -16,11 +16,31 @@
                 display: flex;
 
                 .item-name {
-                    width: 192px;
+                    width: 25%;
                 }
 
                 .item-class {
-                    width: 168px;
+                    width: 20%;
+                }
+
+                .item-info {
+                    width: 55%;
+                }
+            }
+        }
+
+        .common-table-body {
+            .ncl-collapsing-row .item-row {
+                .item-name {
+                    width: 22%;
+                }
+
+                .item-class {
+                    width: 20%;
+                }
+
+                .item-info {
+                    width: 58%;
                 }
             }
         }
