--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -1,5 +1,7 @@
 <div class="ncl-key-value-input">
-    <form name="$ctrl.keyValueInputForm" class="input-wrapper">
+    <form name="$ctrl.keyValueInputForm"
+          class="input-wrapper"
+          data-ng-click="$ctrl.onEditInput()">
         <igz-validating-input-field class="input-key"
                                     data-ng-class="{'use-type': $ctrl.useType}"
                                     data-field-type="input"
