--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -7,7 +7,7 @@
                 <igz-validating-input-field data-field-type="input"
                                             data-input-name="itemName"
                                             data-input-value="$ctrl.item.name"
-                                            data-is-focused="false"
+                                            data-is-focused="true"
                                             data-form-object="$ctrl.editItemForm"
                                             data-validation-is-required="true"
                                             data-placeholder-text="Type name..."
