--- a/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
+++ b/src/nuclio/common/components/collapsing-row/collapsing-row.tpl.html
@@ -1,9 +1,9 @@
 <div class="ncl-collapsing-row">
-    <div class="title-block common-table-row" data-ng-class="{'collapsed': !$ctrl.item.ui.expanded}">
+    <div class="title-block common-table-row" data-ng-class="{'collapsed': !$ctrl.item.ui.editModeActive}">
         <div class="common-table-cell row-collapse">
             <span class="collapse-icon"
-                  data-ng-click="$ctrl.onCollapse()"
-                  data-ng-class="{'collapsed igz-icon-right': !$ctrl.item.ui.expanded, 'igz-icon-down': $ctrl.item.ui.expanded}"></span>
+                  data-ng-click="$ctrl.onCollapse($event)"
+                  data-ng-class="{'collapsed igz-icon-right': !$ctrl.item.ui.editModeActive, 'igz-icon-down': $ctrl.item.ui.editModeActive}"></span>
         </div>
 
         <div data-ng-show="!$ctrl.item.ui.editModeActive" class="igz-row common-table-cells-container item-row">
@@ -14,7 +14,7 @@
                 {{$ctrl.item.kind}}
             </div>
             <div class="igz-col-70 item-info">
-                <div data-ng-hide="$ctrl.item.ui.expanded" class="collapsed-item-info-block">
+                <div data-ng-hide="$ctrl.item.ui.editModeActive" class="collapsed-item-info-block">
                     <span data-ng-if="!$ctrl.isNil($ctrl.item.url)">
                         <span class="field-label">URL</span>:&nbsp;{{ $ctrl.item.url }};&nbsp;
                     </span>
