--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -176,7 +176,7 @@
                 }
             }
 
-            .icon-collabled.general-content {
+            .icon-collapsed.general-content {
                 .duskThree(0.64);
                 position: absolute;
                 right: 23px;
