--- a/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
+++ b/src/nuclio/common/components/breadcrumbs/breadcrumbs.tpl.html
@@ -14,16 +14,10 @@
 </span>
 
 <span class="ncl-header-subtitle"
+      data-ng-click="$ctrl.goToFunctionsList()"
       data-ng-if="$ctrl.mainHeaderTitle.project && $ctrl.mainHeaderTitle.function">
     <span class="igz-icon-right"></span>
-    {{$ctrl.mainHeaderTitle.project}}
-</span>
-
-<span class="ncl-header-subtitle"
-      data-ng-click="$ctrl.goToFunctionsList()"
-      data-ng-if="$ctrl.mainHeaderTitle.function">
-    <span class="igz-icon-right"></span>
-    <span class="main-header-title">Functions</span>
+    <span class="main-header-title">{{$ctrl.mainHeaderTitle.project}}</span>
 </span>
 
 <span class="ncl-header-subtitle"
@@ -39,7 +33,7 @@
       data-ng-if="$ctrl.mainHeaderTitle.version">
     <span class="igz-icon-right"></span>
 
-    <ncl-breadcrumbs-dropdown data-state="$ctrl.mainHeaderTitle.state"
-                              data-title="$ctrl.mainHeaderTitle.version"
-                              class="ncl-bold-subtitle"></ncl-breadcrumbs-dropdown>
+    <span class="ncl-bold-subtitle">
+        {{$ctrl.mainHeaderTitle.version}}
+    </span>
 </span>
